--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+GNOME Video Arcade 0.4.4
+========================
+
+        Released September 16, 2007
+
+        What's New
+        ----------
+        * "Players" column.
+        * Basic search functionality.
+
 GNOME Video Arcade 0.4.3
 ========================
 
