--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-16  Matthew Barnes  <mbarnes@redhat.com>
+
+	* src/gva-mame-common.c (gva_mame_playback_game):
+	Make playback work with SDLMAME.
+
 2007-09-15  Matthew Barnes  <mbarnes@redhat.com>
 
 	* NEWS: Update for 0.4.4
