--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+GNOME Video Arcade 0.4.5
+========================
+
+	Released September --, 2007
+
+	What's New
+	----------
+	* "Driver" column.
+	* More intelligent column sorting.
+
 GNOME Video Arcade 0.4.4
 ========================
 
