--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-09-18  Matthew Barnes  <mbarnes@redhat.com>
 
+	* src/gva-db.c (db_parser_start_element):
+	Parse <driver> elements to make the Status column work again.
+
+2007-09-18  Matthew Barnes  <mbarnes@redhat.com>
+
 	* NEWS: Update for 0.4.5
 
 	* docs/reference:
