--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+GNOME Video Arcade 0.4.5.1
+==========================
+
+        Released September 20, 2007
+
+        What's New
+        ----------
+        * Make the Players and Status columns show something.
+
 GNOME Video Arcade 0.4.5
 ========================
 
