--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2007-09-27  Matthew Barnes  <mbarnes@redhat.com>
+
+	* LINGUAS: Add French (fr).
+
+	* fr.po: French translation from ElGeneralMidi.
+
 2007-09-01  Matthew Barnes  <mbarnes@redhat.com>
 
 	* POTFILES.in: Add src/gconf-bridge.c.
