--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2007-10-10  Matthew Barnes  <mbarnes@redhat.com>
+
+	* src/gva-game-store.c:
+	* src/gva-mame-process.c:
+	* src/gva-process.c:
+	* src/gva-util.c:
+	* docs/reference:
+	Add more developer documentation (79% coverage).
+
 2007-10-08  Matthew Barnes  <mbarnes@redhat.com>
 
 	Revert the previous changes.  I ran into too many complications
