--- a/docs/gnome-video-arcade.1
+++ b/docs/gnome-video-arcade.1
@@ -28,6 +28,9 @@ Show help options
 \fB\-b\fR, \fB\-\-build-database\fR
 Build the games database
 .TP
+\fB\-i\fR, \fB\-\-inspect\fR=\fINAME\fR
+Inpect an emulator setting
+.TP
 \fB\-v\fR, \fB\-\-version\fR
 Show the application version
 .TP
