--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-27  Matthew Barnes  <mbarnes@redhat.com>
+
+	* configure.ac: Post-release version bump.
+
 2007-10-25  Matthew Barnes  <mbarnes@redhat.com>
 
 	NEWS: Update for 0.5.1
