--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+GNOME Video Arcade 0.5.2
+========================
+
+        Released November ?? 2007
+
+        What's New
+        ----------
+        * Alert the user if the ROM file analysis detects any errors.
+
 GNOME Video Arcade 0.5.1
 ========================
 
