--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-06  Matthew Barnes  <mbarnes@redhat.com>
+
+	* POTFILES.in: Add src/gva-audit.c.
+
 2007-09-27  Matthew Barnes  <mbarnes@redhat.com>
 
 	* LINGUAS: Add French (fr).
